--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-demo></app-demo>
+<app-child1></app-child1>
+<app-child2></app-child2>
+<app-child></app-child>
 
 <router-outlet></router-outlet>
